# cdawg-index

./: CMakeLists.txt  README.md
include/cdawg-index/: cdawg.hpp  cfg.hpp
src/: E_coliout.txt  cdawg.cpp  cfg.cpp  drseuss.txt.C  drseuss.txt.R  main.cpp
